forge/1.19.4/knowledge/version-changes/1.19.x.md
# 版本变更记录：1.19.x

## 1.19.4 Forge（45.x）重要变更

### RegisterEvent → DeferredRegister 过渡

1.19.x 是 DeferredRegister 成熟的版本，推荐迁移：

```java
// ✅ 推荐方式（1.19.4+）
public static final DeferredRegister<Block> BLOCKS =
    DeferredRegister.create(ForgeRegistries.BLOCKS, MOD_ID);

// 另一种正规方式：直接订阅 RegisterEvent（必须挂在 mod 事件总线；本仓仍推荐上面的 DeferredRegister）
@SubscribeEvent
public void onRegister(RegisterEvent event) {   // 1.19.4 的 RegisterEvent 不带泛型（证据：本档语料 concepts_registries.md:46）
    event.register(ForgeRegistries.Keys.BLOCKS, helper -> helper.register(new ResourceLocation(MOD_ID, "my_block"), new Block(...)));  // 证据：本档语料 concepts_registries.md:37,46-55；ResourceLocation(String,String) 见本档 api-index
}
```

### ForgeGradle 升级（FG5 → FG6）

1.19.2+ ForgeGradle 升级到 6.x：

```groovy
// 旧（FG5）
buildscript {
    repositories {
        maven { url "https://maven.minecraftforge.net/" }
    }
    dependencies {
        classpath "net.minecraftforge.gradle:ForgeGradle:5.1.+"
    }
}

// 新（FG6）
plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}
```

### 1.19.x 与 1.20.x 的主要差异

| 项目 | 1.19.x | 1.20.x |
|------|---------|---------|
| Java 版本 | Java 17+ | Java 17+ |
| ForgeGradle | 5.x 或 6.x | **6.x only** |
| Registry API | DeferredRegister | DeferredRegister（一致） |
| EntityType | `EntityType.Builder` | `EntityType.Builder`（一致） |
| mods.toml | 支持 | 支持（一致） |
| DeferredRegister for Vanilla | 1.18+ 支持 | 完全支持 |
| MobCategory | 使用 | 使用（Forge / Mojmap 仍是 `MobCategory`。`SpawnGroup` 是 Yarn 名，不要抄进本档） |

### 1.19.x 特有配置

```properties
# 1.19.4
minecraft_version=1.19.4
forge_version=45.4.0
forge_version_range=[45,)
minecraft_version_range=[1.19.4,1.20)
mapping_channel=parchment
mapping_version=2023.06.26-1.19.4
```

### pack_format 差异

| Minecraft 版本 | pack_format |
|--------------|------------|
| 1.19.4 | 数据包 **12** / 资源包 **13** |
| 1.19.3 | 12 |
| 1.20 - 1.20.1 | 15 |

### 迁移注意事项

1. **Java 版本**：两个版本均要求 Java 17+，但建议在 build.gradle 中明确指定：
   ```groovy
   java.toolchain.languageVersion = JavaLanguageVersion.of(17)
   ```

2. **Mixin 兼容性**：Mixin 7.x 在 1.19.x 和 1.20.x 均可使用，插件配置一致。

3. **DataGen**：RecipeProvider 和 LootTableProvider API 在 1.19.x 和 1.20.x 基本一致。

4. **MobCategory**：Forge / Mojmap 1.19–1.20 都是 `MobCategory`（`net.minecraft.world.entity.MobCategory`）。`SpawnGroup` 只是 Yarn（Fabric）叫法，**Forge / Mojmap 任何版本都不存在 `SpawnGroup` 这个类**；「某个 Forge 小版本把它重命名了」是虚构说法，不要据此改名。
